# siftlog-py

./: .gitignore  CHANGELOG  LICENSE  Makefile  PKG-INFO  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
jaylog/: __init__.py
jaylog/tests/: test_jaylog.py
siftlog/: __init__.py
siftlog/tests/: __init__.py  test_color.py  test_jaylog.py  test_json_color.py  test_log.py  test_plain_color.py
