[tool.poetry]
name = "siftlog-py"
version = "0.9.2"
description = "Structured JSON logging"

license = "MIT"
repository = "https://github.com/papito/siftlog-py"
readme = "README.md"

authors = ["Andrei Taranchenko <drey10@gmail.com>"]
keywords = ["logging", "logs"]

include = [
    "LICENSE", "README.rst"
]

packages = [
    { include = "siftlog", from = "." }
]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
nose = "^1.3.7"
flake8 = "^3.9.2"
isort = "^5.9.1"
black = "^21.6b0"
mdToRst = "^1.1.0"

[build-system]
requires = ["setuptools", "poetry>=1.1.7"]
